force-app/main/default/objects/DynamicRelatedList__mdt/DynamicRelatedList__mdt.object-meta.xml
<CustomObject>
    <description>This metadata records will configure the related list component</description>
    <label>DynamicRelatedList</label>
    <pluralLabel>DynamicRelatedLists</pluralLabel>
</CustomObject>