force-app/main/default/objects/DynamicRelatedList__mdt/fields/Button_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Button_Configuration__c</fullName>
    <label>Button Configuration</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>