force-app/main/default/objects/DynamicRelatedList__mdt/fields/List_Title__c.field-meta.xml
<CustomField>
    <fullName>List_Title__c</fullName>
    <description>This field will store the title of the Related List to be displayed.</description>
    <inlineHelpText>This field will store the title of the Related List to be displayed.</inlineHelpText>
    <label>List Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>