force-app/main/default/objects/DynamicRelatedList__mdt/fields/Show_Delete_Action__c.field-meta.xml
<CustomField>
    <fullName>Show_Delete_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Delete Action</label>
    <type>Checkbox</type>
</CustomField>